# LAS-TRX

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: gui-release.yml  lint.yml  pypi-publish.yml  test.yml
las_trx/: __main__.py  config.py  convert.py  logger.py  main.py  ui_mainwindow.py  utils.py  vlr.py  worker.py
las_trx/resources/: mainwindow.ui
resources/: mainwindow.ui
src/las_trx/: __init__.py  __main__.py  config.py  config_builder.py  constants.py  controllers.py  exceptions.py  file_operations.py  main_window.py  transformation.py  ui_interface.py  utils.py  vlr.py  widgets.py  worker.py
src/las_trx/resources/: mainwindow.ui
tests/: test_config.py
ui/: mainwindow.ui
