[project]
name = "las-trx"
version = "0.0.0"
description = "Convert lidar .las/.laz file coordinates between various ITRF realizations and NAD83 CSRS."
readme = "README.md"
authors = [{ name = "Taylor Denouden", email = "taylor.denouden@hakai.org" }]
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "csrspy>=0.7.0",
    "laspy>=2.6.1",
    "laszip>=0.2.3",
    "pydantic>=2.9.2",
    "pyinstaller>=6.10.0",
    "pyproj>=3.7.1",
    "pyqt6>=6.7.1",
    "requests>=2.32.5",
]

[dependency-groups]
test = [
    "pytest>=7.4.4",
]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.6.9",
]

[project.urls]
Repository = "https://github.com/HakaiInstitute/LAS-TRX"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "UP",
    "ANN",
    "TC",
    "NPY",
    #    "DOC",
    #    "D",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # Ignore use of assert in tests
    "N999", # Invalid module name
    "D", # Docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
